# C--Game-Collection

./: README.md
Games/tic-tac-toe/: CMakeLists.txt  main.cpp
Games/tic-tac-toe/ControllerClasses/: ticTacToeController.cpp  ticTacToeController.h
Games/tic-tac-toe/LogicClasses/: ticTacToeLogic.cpp  ticTacToeLogic.h
Games/tic-tac-toe/UIClasses/: TicTacToeField.cpp  TicTacToeField.h
